--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CineVault - Discover Movies</title>
+    <title>Discover Movies</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -93,3 +93,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
